# competition_prediction_app

./: .coveragerc  .gitignore  Makefile  Makefile.in  README.md  VERSION  configure.ac  gamlaffo.conf  requirements.txt  requirements_dev.txt  serializers.py
.github/workflows/: pythonapp.yml
competition/: admin.py  models.py  tests.py  urls.py  views.py
competition/fixtures/: predictions.json  teams.json
competition/migrations/: 0001_initial.py  0001_squashed_0027_remove_tournament_late_get_bonus.py  0002_auto_20161207_0025.py  0002_auto_20220115_2309.py  0003_auto_20220115_2327.py  0004_auto_20220128_0005.py  0005_auto_20220128_0025.py  0006_tournament_additional_rules.py  0007_auto_20220302_0107.py  0008_auto_20170506_1024.py  0008_auto_20221231_1351.py  0009_alter_tournament_year.py  0009_auto_20170506_1144.py  0009_auto_20230103_1907.py  0010_auto_20230111_2313.py  0010_auto_20230208_0020.py  0011_alter_team_unique_together.py  0011_auto_20230211_1409.py  0012_alter_team_options.py  0013_benchmark_can_receive_bonus.py  0014_alter_tournament_year.py  0019_benchmark.py  0020_auto_20190928_2344.py  0025_auto_20210525_2305.py  0026_auto_20210527_2159.py  (+1 more)
competition/templates/: index.html  (+11 more)
member/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
server/: forms.py  serializers.py  settings.py  tests.py  urls.py  views.py
templates/: about.html  base.html  gdpr.html  home.html
test/: matches_upload.csv  matches_upload_winner_of.csv  teams_A_to_H_upload.csv  teams_A_to_J_upload.csv  teams_E_to_J_upload.csv
utils/: calendar_parser.py  web_parser.py
(+28 files in other folders)
